# CodingChallenges

./: README.md
Calculator/: CMakeLists.txt  Calc  Tests.txt  main.c  run_tests.sh
CompressionTool/: CMakeLists.txt  main.c  unittest.txt
Compressor/: CMakeLists.txt  main.c  oneChar.txt  test.txt-compressed.txt  unittest.txt  unittest.txt-compressed.txt
CutTool/: CMakeLists.txt  main.c
Grep/: CMakeLists.txt  main.c
LoadBalancer/LoadBalancer/: CMakeLists.txt  main.c
LoadBalancer/Server/: CMakeLists.txt  main.c
RedisServer/: CMakeLists.txt  Deserialization.c  Deserialization.h  Serialization.c  Serialization.h  Structs.h  Tests.c  Tests.h  main  main.c
Sort/: CMakeLists.txt  main.c
jsonParser/: CMakeLists.txt  main.c
jsonParser/tests/step4/: my.json  valid2.json
mwctool/: CMakeLists.txt  main.c
